Fix text wrapping in status director page - reported by Sergey Zhidkov

--- a/Common/CSS/baculum.css
+++ b/Common/CSS/baculum.css
@@ -797,7 +797,7 @@ img.job_weather_icon {
 }
 
 .status_flex_row > div {
-	flex-basis: 180px;
+	flex-basis: 185px;
 	height: 28px;
 }
 
